--- a/packages/rettangoli-primitives-web/specs/view/align/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/align/0001.html
@@ -1,73 +1,105 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Align (Single item)
+specs:
+    - test various combinations of ah and av
 ---
 
 <rtgl-view g="m" p="l" wh="f" fw="w">
 
     <rtgl-view d="h" g="m">
-        <rtgl-view bgc="sucl" wh="80">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view bgc="sucl" wh="40">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="80" ah="c">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view bgc="sucl" wh="40" ah="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="80" ah="e">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view bgc="sucl" wh="40" ah="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
 
-        <rtgl-view d="h" bgc="sucl" wh="80">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view d="v" bgc="sucl" wh="40">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="80" ah="c">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view d="v" bgc="sucl" wh="40" ah="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="80" ah="e">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view d="v" bgc="sucl" wh="40" ah="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        </rtgl-view>
+
+        <rtgl-view d="h" bgc="sucl" wh="40">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="sucl" wh="40" ah="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="sucl" wh="40" ah="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
     </rtgl-view>
 
     <rtgl-view d="h" g="m">
-        <rtgl-view bgc="sucl" wh="80" av="c">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view bgc="sucl" wh="40" av="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="80" ah="c" av="c">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view bgc="sucl" wh="40" ah="c" av="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="80" ah="e" av="c">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view bgc="sucl" wh="40" ah="e" av="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
 
-        <rtgl-view d="h" bgc="sucl" wh="80" av="c">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view d="v" bgc="sucl" wh="40" av="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="c">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view d="v" bgc="sucl" wh="40" ah="c" av="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="c">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view d="v" bgc="sucl" wh="40" ah="e" av="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        </rtgl-view>
+
+        <rtgl-view d="h" bgc="sucl" wh="40" av="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="sucl" wh="40" ah="c" av="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="sucl" wh="40" ah="e" av="c">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
     </rtgl-view>
 
     <rtgl-view d="h" g="m">
-        <rtgl-view bgc="sucl" wh="80" av="e">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view bgc="sucl" wh="40" av="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="80" ah="c" av="e">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view bgc="sucl" wh="40" ah="c" av="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="80" ah="e" av="e">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view bgc="sucl" wh="40" ah="e" av="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
 
-        <rtgl-view d="h" bgc="sucl" wh="80" av="e">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view d="v" bgc="sucl" wh="40" av="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="e">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+        <rtgl-view d="v" bgc="sucl" wh="40" ah="c" av="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="e">
-            <rtgl-view bgc="suc" wh="20"></rtgl-view>
+
+        <rtgl-view d="v" bgc="sucl" wh="40" ah="e" av="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        </rtgl-view>
+
+        <rtgl-view d="h" bgc="sucl" wh="40" av="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="sucl" wh="40" ah="c" av="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="sucl" wh="40" ah="e" av="e">
+            <rtgl-view bgc="su" wh="12"></rtgl-view>
         </rtgl-view>
     </rtgl-view>
 
