--- a/packages/rettangoli-primitives-web/specs/view/align/0002.html
+++ b/packages/rettangoli-primitives-web/specs/view/align/0002.html
@@ -1,48 +1,48 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Align (Multiple items)
+specs:
+    - test various combinations of ah and av
 ---
 
 <rtgl-view d="h" g="m" p="l" wh="f" fw="w">
-  <rtgl-view d="h" bgc="sucl" wh="80" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="40" g="s">
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="40" ah="c" g="s">
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-  </rtgl-view>
-
-  <rtgl-view d="h" bgc="sucl" wh="80" av="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-  </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="80" av="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="40" ah="e" g="s">
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="40" av="c" g="s">
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+  </rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="40" ah="c" av="c" g="s">
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+  </rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="40" ah="e" av="c" g="s">
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="40" av="e" g="s">
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="40" ah="c" av="e" g="s">
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="40" ah="e" av="e" g="s">
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
+    <rtgl-view bgc="su" wh="12"></rtgl-view>
   </rtgl-view>
 </rtgl-view>
