--- a/packages/rettangoli-primitives-web/specs/view/align/0004.html
+++ b/packages/rettangoli-primitives-web/specs/view/align/0004.html
@@ -1,114 +1,113 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Align (Flex wrap items direction vertical)
 ---
 
 <rtgl-view d="h" g="m" p="l" wh="f" fw="w">
-  <rtgl-view bgc="sucl" wh="80" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
   <!-- TODO fix inconsisteincies between justify and align -->
-  <rtgl-view bgc="sucl" wh="80" ah="c" g="">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" ah="c" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view bgc="sucl" wh="80" ah="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" ah="e" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view bgc="sucl" wh="80" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view bgc="sucl" wh="80" av="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" av="c" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view bgc="sucl" wh="80" av="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-  </rtgl-view>
-
-  <rtgl-view bgc="sucl" wh="80" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" av="e" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="80" av="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="80" av="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" av="c" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="80" ah="c" g="m">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" av="e" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="80" ah="c" av="c" g="m">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" ah="c" g="m" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="80" ah="c" av="e" g="m">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" ah="c" av="c" g="m" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="80" ah="e" g="m">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" ah="c" av="e" g="m" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="80" ah="e" av="c" g="m">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" ah="e" g="m" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="80" ah="e" av="e" g="m">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" ah="e" av="c" g="m" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="80" g="m">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view bgc="sucl" wh="80" ah="e" av="e" g="m" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+  </rtgl-view>
+
+  <rtgl-view bgc="sucl" wh="80" g="m" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 </rtgl-view>
