--- a/packages/rettangoli-primitives-web/specs/view/border/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/border/0001.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Border Width
 ---
 <rtgl-view d="h" g="m" p="l" wh="f" fw="w">
     <rtgl-view bgc="sucl" bw="xs" bc="p" wh="50" p="m"></rtgl-view>
