--- a/packages/rettangoli-primitives-web/specs/view/gap/0003.html
+++ b/packages/rettangoli-primitives-web/specs/view/gap/0003.html
@@ -1,10 +1,10 @@
 ---
-title: View - Gap
+title: View - Gap Vertical
 specs:
-  - g="xs" should set the gap to spacing size
+  - gv="xs" should set the vertical gap to spacing size
 ---
 <rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-    <rtgl-view d="h" bgc="sucl" w="100" g="xs" p="m" fw="w">
+    <rtgl-view d="h" bgc="sucl" w="100" gv="xs" p="m" fw="w">
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
@@ -12,7 +12,7 @@ specs:
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" g="s" p="m" fw="w">
+    <rtgl-view d="h" bgc="sucl" w="100" gv="s" p="m" fw="w">
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
@@ -20,7 +20,7 @@ specs:
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" g="m" p="m" fw="w">
+    <rtgl-view d="h" bgc="sucl" w="100" gv="m" p="m" fw="w">
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
@@ -28,7 +28,7 @@ specs:
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" g="l" p="m" fw="w">
+    <rtgl-view d="h" bgc="sucl" w="100" gv="l" p="m" fw="w">
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
@@ -36,7 +36,7 @@ specs:
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" g="xl" p="m" fw="w">
+    <rtgl-view d="h" bgc="sucl" w="100" gv="xl" p="m" fw="w">
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
         <rtgl-view bgc="su" wh="20"></rtgl-view>
