--- a/packages/rettangoli-primitives-web/specs/view/margin/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/margin/0001.html
@@ -1,85 +1,124 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Margin
+specs:
+  - mt="xs" should set the top margin to spacing size
+  - mr="xs" should set the right margin to spacing size
+  - mb="xs" should set the bottom margin to spacing size
+  - ml="xs" should set the left margin to spacing size
+  - m="xs" should set the margin to spacing size
+  - mv="xs" should set the vertical margin to spacing size
+  - mh="xs" should set the horizontal margin to spacing size
 ---
-<rtgl-view d="h" g="l" p="l" wh="f">
+<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mt="xs"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mt="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mt="s"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mt="s"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mt="m"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mt="m"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mt="l"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mt="l"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mt="xl"></rtgl-view>
-    </rtgl-view>
-
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mr="xs"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mr="s"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mr="m"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mr="l"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mr="xl"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mt="xl"></rtgl-view>
     </rtgl-view>
 
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" ml="xs"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mr="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" ml="s"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mr="s"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" ml="m"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mr="m"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" ml="l"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mr="l"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" ml="xl"></rtgl-view>
-    </rtgl-view>
-
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mb="xs"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mb="s"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mb="m"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mb="l"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" mb="xl"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" mr="xl"></rtgl-view>
     </rtgl-view>
 
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" m="xs"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" ml="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" m="s"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" ml="s"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" m="m"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" ml="m"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" m="l"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" ml="l"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="sucl">
-        <rtgl-view bgc="suc" wh="50" m="xl"></rtgl-view>
+        <rtgl-view bgc="su" wh="50" ml="xl"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mb="xs"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mb="s"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mb="m"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mb="l"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mb="xl"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" m="xs"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" m="s"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" m="m"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" m="l"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" m="xl"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mv="xs"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mv="s"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mv="m"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mv="l"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mv="xl"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mh="xs"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mh="s"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mh="m"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mh="l"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl">
+        <rtgl-view bgc="su" wh="50" mh="xl"></rtgl-view>
     </rtgl-view>
 </rtgl-view>
