--- a/packages/rettangoli-primitives-web/specs/view/opacity/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/opacity/0001.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Opacity
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
     <rtgl-view bgc="sucl" wh="100" o="0.1"></rtgl-view>
