--- a/packages/rettangoli-primitives-web/specs/view/overflow/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/overflow/0001.html
@@ -1,51 +1,59 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Overflow
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
-    <rtgl-view bgc="sucl" g="m" wh="100" sv>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+    <rtgl-view bgc="sucl" g="m" wh="40" sv>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="100" sh>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+    <rtgl-view bgc="sucl" g="m" wh="40" sh>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="100" sh d="h">
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+    <rtgl-view bgc="sucl" g="m" wh="40" sh d="h">
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="100" sh>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+    <rtgl-view bgc="sucl" g="m" wh="40" sh>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="xl" wh="100">
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+    <rtgl-view bgc="sucl" g="m" wh="40">
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view h="1" w="40"></rtgl-view>
-
-    <rtgl-view bgc="sucl" g="xl" wh="100" overflow="hidden">
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
-        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+    <rtgl-view bgc="sucl" g="m" wh="40" overflow="hidden">
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
     </rtgl-view>
+
+    <rtgl-view bgc="sucl" g="m" wh="40" fw="w">
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view bgc="sucl" g="m" wh="40" fw="w">
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    </rtgl-view>
+
 </rtgl-view>
