--- a/packages/rettangoli-primitives-web/specs/view/position/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/position/0001.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Position absolute (top and bottom)
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
     <rtgl-view bgc="sucl" pos="fix" cor="top" h="100">
