--- a/packages/rettangoli-primitives-web/specs/view/shadow/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/shadow/0001.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Shadow
 ---
 <rtgl-view d="h" g="xl" p="xl" wh="f">
     <rtgl-view bgc="sucl" wh="50" shadow="s"></rtgl-view>
