--- a/packages/rettangoli-primitives-web/specs/view/align/0003.html
+++ b/packages/rettangoli-primitives-web/specs/view/align/0003.html
@@ -1,113 +1,114 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Align (Flex wrap items direction horizontal)
+specs:
+    - test various combinations of ah and av for flex wrap items
 ---
 
 <rtgl-view d="h" g="m" p="l" wh="f" fw="w">
-  <rtgl-view d="h" bgc="sucl" wh="80" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="80" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="80" av="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" av="c" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="80" av="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-  </rtgl-view>
-
-  <rtgl-view d="h" bgc="sucl" wh="80" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" av="e" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" av="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" av="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" av="c" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" av="e" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="c" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="e" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="c" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="e" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="c" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="80" g="s">
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
-    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="e" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+  </rtgl-view>
+
+  <rtgl-view d="h" bgc="sucl" wh="80" g="s" fw="w">
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view bgc="su" wh="20"></rtgl-view>
   </rtgl-view>
 </rtgl-view>
