--- a/packages/rettangoli-primitives-web/specs/view/border/0002.html
+++ b/packages/rettangoli-primitives-web/specs/view/border/0002.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Border Color
 ---
 <rtgl-view d="h" g="m" p="l" wh="f" fw="w">
     <rtgl-view bgc="sucl" bw="xl" bc="su" wh="50" p="m"></rtgl-view>
