--- a/packages/rettangoli-primitives-web/specs/view/br/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/br/0001.html
@@ -1,26 +1,25 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Border Radius
 ---
 <rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-    <rtgl-view bgc="suc" wh="100" p="m" br="xs"></rtgl-view>
-    <rtgl-view bgc="suc" wh="100" p="m" br="s"></rtgl-view>
-    <rtgl-view bgc="suc" wh="100" p="m" br="m"></rtgl-view>
-    <rtgl-view bgc="suc" wh="100" p="m" br="l"></rtgl-view>
-    <rtgl-view bgc="suc" wh="100" p="m" br="xl"></rtgl-view>
-    <rtgl-view bgc="suc" wh="100" p="m" br="f"></rtgl-view>
+    <rtgl-view bgc="suc" wh="50" p="m" br="xs"></rtgl-view>
+    <rtgl-view bgc="suc" wh="50" p="m" br="s"></rtgl-view>
+    <rtgl-view bgc="suc" wh="50" p="m" br="m"></rtgl-view>
+    <rtgl-view bgc="suc" wh="50" p="m" br="l"></rtgl-view>
+    <rtgl-view bgc="suc" wh="50" p="m" br="xl"></rtgl-view>
+    <rtgl-view bgc="suc" wh="50" p="m" br="f"></rtgl-view>
 
-    <rtgl-view bgc="suc" w="100" h="50" p="m" br="xs"></rtgl-view>
-    <rtgl-view bgc="suc" w="100" h="50" p="m" br="s"></rtgl-view>
-    <rtgl-view bgc="suc" w="100" h="50" p="m" br="m"></rtgl-view>
-    <rtgl-view bgc="suc" w="100" h="50" p="m" br="l"></rtgl-view>
-    <rtgl-view bgc="suc" w="100" h="50" p="m" br="xl"></rtgl-view>
-    <rtgl-view bgc="suc" w="100" h="50" p="m" br="f"></rtgl-view>
+    <rtgl-view bgc="suc" w="20" h="50" p="m" br="xs"></rtgl-view>
+    <rtgl-view bgc="suc" w="20" h="50" p="m" br="s"></rtgl-view>
+    <rtgl-view bgc="suc" w="20" h="50" p="m" br="m"></rtgl-view>
+    <rtgl-view bgc="suc" w="20" h="50" p="m" br="l"></rtgl-view>
+    <rtgl-view bgc="suc" w="20" h="50" p="m" br="xl"></rtgl-view>
+    <rtgl-view bgc="suc" w="20" h="50" p="m" br="f"></rtgl-view>
 
-    <rtgl-view bgc="suc" w="50" h="100" p="m" br="xs"></rtgl-view>
-    <rtgl-view bgc="suc" w="50" h="100" p="m" br="s"></rtgl-view>
-    <rtgl-view bgc="suc" w="50" h="100" p="m" br="m"></rtgl-view>
-    <rtgl-view bgc="suc" w="50" h="100" p="m" br="l"></rtgl-view>
-    <rtgl-view bgc="suc" w="50" h="100" p="m" br="xl"></rtgl-view>
-    <rtgl-view bgc="suc" w="50" h="100" p="m" br="f"></rtgl-view>
+    <rtgl-view bgc="suc" w="50" h="20" p="m" br="xs"></rtgl-view>
+    <rtgl-view bgc="suc" w="50" h="20" p="m" br="s"></rtgl-view>
+    <rtgl-view bgc="suc" w="50" h="20" p="m" br="m"></rtgl-view>
+    <rtgl-view bgc="suc" w="50" h="20" p="m" br="l"></rtgl-view>
+    <rtgl-view bgc="suc" w="50" h="20" p="m" br="xl"></rtgl-view>
+    <rtgl-view bgc="suc" w="50" h="20" p="m" br="f"></rtgl-view>
 </rtgl-view>
