--- a/packages/rettangoli-primitives-web/specs/view/hidden/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/hidden/0001.html
@@ -1,10 +1,9 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: View - Hidden
 ---
 <rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-    <rtgl-view d="h" bgc="sucl" wh="100" g="xs" p="m" fw="w">
+    <rtgl-view d="h" bgc="sucl" wh="100" >
     </rtgl-view>
-    <rtgl-view hidden d="h" bgc="sucl" wh="100" g="xs" p="m" fw="w">
+    <rtgl-view hidden d="h" bgc="sucl" wh="100">
     </rtgl-view>
 </rtgl-view>
